--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       </head>
  
   <body>
-    <img id="img" src="Images/myphoto.png">
+    <img id="img" src="images/myphoto.png">
         
         <h1 id="a">Hello</h1>
         <h1 id="b">I'am</h1>
